--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,10 @@
 <html lang="en">
 	<head>
     	<meta charset="UTF-8">
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    	<meta http-equiv="X-UA-Compatible" 
+				content="IE=edge">
+    	<meta name="viewport" 
+				content="width=device-width, initial-scale=1.0">
     	<title>MatMice-like Web Maker</title>
     	<style>
         	body {
@@ -122,7 +124,7 @@
             	<br>
 	
             	<!-- JavaScript Textarea -->
-            	<label for="jsSnippet">Your JavaScript (Currently not working!):</label>
+            	<label for="jsSnippet">Your JavaScript:</label>
             	<textarea id="jsSnippet" name="jsSnippet" rows="10" required></textarea>
             	<br>
 
