--- a/public/index.html
+++ b/public/index.html
@@ -157,5 +157,9 @@
         	<div class="line"></div>
         	<div class="line"></div>
     	</div>
+		<!-- Footer -->
+		<footer>
+			<p>&copy; 2024 MatMice.Site All rights reserved. (Not affiliated with matmice.com or any other page!)</p>
+		</footer>
 	</body>
 </html>
