--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,8 @@
             	<a href="/cool-pages">Cool Pages</a> |
             	<a href="/grownups">Grownups</a> |
             	<a href="/about">About</a> |
-            	<a href="/help">Help</a>
+            	<a href="/help">Help</a> |
+				<a href="/random/page">Random Page</a>
         	</div>
 	
         	<h1>MatMice ~ Kids Web Development Tool</h1>
