-not a useful commit message

--- a/public/index.html
+++ b/public/index.html
@@ -122,6 +122,16 @@
 				We appreciate your understanding and patience as we continue to enhance and refine
 				our site's functionality.
 			</p>
+			<h2>Coming soon...</h2>
+			<ul>
+				<li>Email to feature (Email finished web page to yourself or parent!)</li>
+				<li>Token based validation for users (No register/login!)</li>
+				<li>Saving/Loading from local and to Gdrive</li>
+				<li>UI Sandbox editor</li>
+				<li>Image Generation Tools</li>
+				<li>Audio/Voice Generation Tools</li>
+				<li>and much... much more!</li>
+			</ul>
 			<audio id="welcomeAudio" src="/welcome.mp3" type="audio/mpeg" style="display: none;">
 				Your browser does not support the audio element.
 			</audio>
@@ -164,7 +174,7 @@
     	</div>
 		<!-- Footer -->
 		<footer>
-			<p>&copy; 2024 MatMice.Site All rights reserved. (Not affiliated with matmice.com or any other page!)</p>
+			<p>&copy; 2024 MatMice.Site All rights reserved. (Not affiliated with matmice.com or any other page!) Currently using ChatGPT 3.5, Gemini, and ElevenLabs (Will add onto this list... attributions)</p>
 		</footer>
 	</body>
 	<script src="/script.js">
