--- a/public/index.html
+++ b/public/index.html
@@ -8,95 +8,7 @@
     	<meta name="viewport" 
 				content="width=device-width, initial-scale=1.0">
     	<title>MatMice-like Web Maker</title>
-    	<style>
-        	body {
-            	font-family: Arial, sans-serif;
-            	background-color: #f1f5f8; /* Light blue background */
-            	margin: 0;
-            	padding: 0;
-        	}
-	
-        	#container {
-            	background-color: #f1f5f8; /* White container */
-            	max-width: 800px;
-            	margin: 20px auto;
-            	padding: 20px;
-            	border-radius: 10px;
-            	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            	position: relative;
-        	}
-	
-        	h1 {
-            	color: #0077cc; /* MatMice blue color */
-            	text-align: center;
-        	}
-	
-        	form {
-            	background-color: #ffffff; /* White form background */
-            	padding: 20px;
-            	border-radius: 10px;
-            	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        	}
-	
-        	label {
-            	display: block;
-            	margin-bottom: 5px;
-        	}
-	
-        	input, textarea {
-            	width: calc(100% - 16px); /* Adjust for padding */
-            	padding: 8px;
-            	margin-bottom: 10px;
-            	border: 1px solid #ccc;
-            	border-radius: 4px;
-            	box-sizing: border-box;
-        	}
-	
-        	input[type="submit"] {
-            	background-color: #0077cc; /* MatMice blue color */
-            	color: white;
-            	cursor: pointer;
-        	}
-	
-        	input[type="submit"]:hover {
-            	background-color: #005580; /* Darker blue on hover */
-        	}
-	
-        	.lines {
-            	position: absolute;
-            	top: 0;
-            	left: 0;
-            	right: 0;
-            	bottom: 0;
-            	z-index: -1;
-        	}
-	
-        	.line {
-            	position: absolute;
-            	width: 100%;
-            	height: 1px;
-            	background-color: #b0d3f4; /* Light blue line color */
-        	}
-	
-        	.line:nth-child(2) {
-            	top: 25%;
-        	}
-	
-        	.line:nth-child(3) {
-            	top: 50%;
-        	}
-	
-        	.line:nth-child(4) {
-            	top: 75%;
-        	}
-			#playAudioParagraph {
-				cursor: pointer;
-				transition: background-color 0.3s ease;
-			}
-			#playAudioParagraph:hover {
-				background-color: #4473f5;
-			}
-    	</style>
+    	<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 
