patching invalid res no return

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 				content="width=device-width, initial-scale=1.0">
     	<title>MatMice-like Web Maker</title>
     	<link rel="stylesheet" href="./stylesheets/style.css">
+		<script src="./javascript/annyang.js"></script>
 	</head>
 	<body>
 		<div>
@@ -56,6 +57,7 @@
 
 				<label for="prompt">Prompt the AI (Or leave empty!):</label>
 				<input type="text" id="prompt" name="prompt">
+				<button id="speechButton">Start Recording</button>
 
             	<input type="submit" value="Create Website">
         	</form>
