added view for all sites, takes a single image when created

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         	<!-- Navigation buttons -->
         	<nav id="nav-buttons">
             	<a href="/">Home</a> |
-            	<a href="/sites">Sites</a> |
+            	<a href="/all/sites">Sites</a> |
 				<a class="rainbow_hover" href="/random/page">Random Page</a>
 			</nav>
         	<form action="/register" method="post" id="registerForm" enctype="application/x-www-form-urlencoded">
@@ -57,8 +57,6 @@
 
 				<label for="prompt">Prompt the AI (Or leave empty!):</label>
 				<input type="text" id="prompt" name="prompt">
-				<button id="speechButton">Start Recording</button>
-
             	<input type="submit" value="Create Website">
         	</form>
     	</div>
