just adding random stuff-rainbow slogan

--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,26 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-    	<meta charset="UTF-8">
-    	<meta http-equiv="X-UA-Compatible" 
-				content="IE=edge">
-    	<meta name="viewport" 
-				content="width=device-width, initial-scale=1.0">
-    	<title>MatMice-like Web Maker</title>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Kids AI Site Maker | MatMice.Site</title>
+		<meta name="description" content="MatMice.Site offers AI-powered tools for kids to create their own websites. It's fun, easy, and educational.">
+		<meta name="keywords" content="Kids, AI, Web Maker, Website Builder, MatMice, Educational Tools, Learning">
+		<meta name="robots" content="index, follow">
     	<link rel="stylesheet" href="./stylesheets/style.css">
-		<script src="./javascript/annyang.js"></script>
 	</head>
 	<body>
-		<div>
-			
+		<div class="slogan">
+			<h1>
+				<span>M</span>achine 
+				<span>A</span>ssisted 
+				<span>T</span>echnology 
+				<span>M</span>aking 
+				<span>I</span>ntelligent 
+				<span>C</span>reative 
+				<span>E</span>xperiences
+			</h1>
 		</div>
     	<div id="container">
         	<!-- Navigation buttons -->
