added some drag and drop features, working on image and audio generating from hugface... would like to get funding going to pay for services

--- a/public/index.html
+++ b/public/index.html
@@ -62,9 +62,74 @@
 					  <textarea id="jsSnippet" name="jsSnippet" rows="10"></textarea>
 					</div>
 				  </div>
-
+				<div class="input-container">
+					<label for="imageName">Image Name (Leave empty to NOT generate an image)</label>
+					<input class="droppable" type="text" id="imageName" name="imageName">
+				</div>
+				<div id="emojis">
+					<span draggable="true" class="draggable emoji" id="emoji1">😀</span>
+					<span draggable="true" class="draggable emoji" id="emoji2">😂</span>
+					<span draggable="true" class="draggable emoji" id="emoji3">😍</span>
+					<span draggable="true" class="draggable emoji" id="emoji4">🐶</span>
+					<span draggable="true" class="draggable emoji" id="emoji5">🐱</span>
+					<span draggable="true" class="draggable emoji" id="emoji6">🐭</span>
+					<span draggable="true" class="draggable emoji" id="emoji7">🐹</span>
+					<span draggable="true" class="draggable emoji" id="emoji8">🐰</span>
+					<span draggable="true" class="draggable emoji" id="emoji9">🦊</span>
+					<span draggable="true" class="draggable emoji" id="emoji10">🐻</span>
+					<span draggable="true" class="draggable emoji" id="emoji11">🐼</span>
+					<span draggable="true" class="draggable emoji" id="emoji12">🐨</span>
+					<span draggable="true" class="draggable emoji" id="emoji13">🐯</span>
+					<span draggable="true" class="draggable emoji" id="emoji14">🦁</span>
+					<span draggable="true" class="draggable emoji" id="emoji15">🐮</span>
+					<span draggable="true" class="draggable emoji" id="emoji16">🐷</span>
+					<span draggable="true" class="draggable emoji" id="emoji17">🐸</span>
+					<span draggable="true" class="draggable emoji" id="emoji18">🐵</span>
+					<span draggable="true" class="draggable emoji" id="emoji19">🍎</span>
+					<span draggable="true" class="draggable emoji" id="emoji20">🍌</span>
+					<span draggable="true" class="draggable emoji" id="emoji21">🍒</span>
+					<span draggable="true" class="draggable emoji" id="emoji22">🍓</span>
+					<span draggable="true" class="draggable emoji" id="emoji23">🥦</span>
+					<span draggable="true" class="draggable emoji" id="emoji24">🥕</span>
+					<span draggable="true" class="draggable emoji" id="emoji25">🍕</span>
+					<span draggable="true" class="draggable emoji" id="emoji26">🍔</span>
+					<span draggable="true" class="draggable emoji" id="emoji27">🍟</span>
+					<span draggable="true" class="draggable emoji" id="emoji28">🍩</span>
+					<span draggable="true" class="draggable emoji" id="emoji29">🍪</span>
+					<span draggable="true" class="draggable emoji" id="emoji30">🎈</span>
+					<span draggable="true" class="draggable emoji" id="emoji31">🎉</span>
+					<span draggable="true" class="draggable emoji" id="emoji32">🎁</span>
+					<span draggable="true" class="draggable emoji" id="emoji33">🎄</span>
+					<span draggable="true" class="draggable emoji" id="emoji34">🎃</span>
+					<span draggable="true" class="draggable emoji" id="emoji35">🎆</span>
+					<span draggable="true" class="draggable emoji" id="emoji36">🎇</span>
+					<span draggable="true" class="draggable emoji" id="emoji37">🎈</span>
+					<span draggable="true" class="draggable emoji" id="emoji38">🎊</span>
+					<span draggable="true" class="draggable emoji" id="emoji39">🎋</span>
+					<span draggable="true" class="draggable emoji" id="emoji40">🎍</span>
+					<span draggable="true" class="draggable emoji" id="emoji41">🎎</span>
+					<span draggable="true" class="draggable emoji" id="emoji42">🎏</span>
+					<span draggable="true" class="draggable emoji" id="emoji43">🎐</span>
+					<span draggable="true" class="draggable emoji" id="emoji44">🎑</span>
+					<span draggable="true" class="draggable emoji" id="emoji45">🎒</span>
+					<span draggable="true" class="draggable emoji" id="emoji46">🎓</span>
+					<span draggable="true" class="draggable emoji" id="emoji47">🎔</span>
+					<span draggable="true" class="draggable emoji" id="emoji48">🎕</span>
+					<span draggable="true" class="draggable emoji" id="emoji49">🎖</span>
+					<span draggable="true" class="draggable emoji" id="emoji50">🎗</span>
+					<span draggable="true" class="draggable emoji" id="emoji51">🎘</span>
+					<span draggable="true" class="draggable emoji" id="emoji52">🎙</span>
+					<span draggable="true" class="draggable emoji" id="emoji53">🎚</span>
+					<span draggable="true" class="draggable emoji" id="emoji54">🎛</span>
+					<span draggable="true" class="draggable emoji" id="emoji55">🎜</span>
+					<span draggable="true" class="draggable emoji" id="emoji56">🎝</span>
+					<span draggable="true" class="draggable emoji" id="emoji57">🎞</span>
+					<span draggable="true" class="draggable emoji" id="emoji58">🎟</span>
+					<span draggable="true" class="draggable emoji" id="emoji59">🎠</span>
+					<span draggable="true" class="draggable emoji" id="emoji60">🎡</span>
+				</div>
 				<label for="prompt">Prompt the AI (Or leave empty!):</label>
-				<input type="text" id="prompt" name="prompt">
+				<input type="text" id="prompt" name="prompt" class="droppable">
             	<input type="submit" value="Create Website">
         	</form>
     	</div>
