adding more emojis, probably will dynamically add and put in some tool bar..

--- a/public/index.html
+++ b/public/index.html
@@ -127,6 +127,66 @@
 					<span draggable="true" class="draggable emoji" id="emoji58">🎟</span>
 					<span draggable="true" class="draggable emoji" id="emoji59">🎠</span>
 					<span draggable="true" class="draggable emoji" id="emoji60">🎡</span>
+					<span draggable="true" class="draggable emoji" id="emoji61">🎢</span>
+					<span draggable="true" class="draggable emoji" id="emoji62">🎣</span>
+					<span draggable="true" class="draggable emoji" id="emoji63">🎤</span>
+					<span draggable="true" class="draggable emoji" id="emoji64">🎥</span>
+					<span draggable="true" class="draggable emoji" id="emoji65">🎦</span>
+					<span draggable="true" class="draggable emoji" id="emoji66">🎧</span>
+					<span draggable="true" class="draggable emoji" id="emoji67">🎨</span>
+					<span draggable="true" class="draggable emoji" id="emoji68">🎩</span>
+					<span draggable="true" class="draggable emoji" id="emoji69">🎪</span>
+					<span draggable="true" class="draggable emoji" id="emoji70">🎫</span>
+					<span draggable="true" class="draggable emoji" id="emoji71">🎬</span>
+					<span draggable="true" class="draggable emoji" id="emoji72">🎭</span>
+					<span draggable="true" class="draggable emoji" id="emoji73">🎮</span>
+					<span draggable="true" class="draggable emoji" id="emoji74">🎯</span>
+					<span draggable="true" class="draggable emoji" id="emoji75">🎰</span>
+					<span draggable="true" class="draggable emoji" id="emoji76">🎱</span>
+					<span draggable="true" class="draggable emoji" id="emoji77">🎲</span>
+					<span draggable="true" class="draggable emoji" id="emoji78">🎳</span>
+					<span draggable="true" class="draggable emoji" id="emoji79">🎴</span>
+					<span draggable="true" class="draggable emoji" id="emoji80">🎵</span>
+					<span draggable="true" class="draggable emoji" id="emoji81">🎶</span>
+					<span draggable="true" class="draggable emoji" id="emoji82">🎷</span>
+					<span draggable="true" class="draggable emoji" id="emoji83">🎸</span>
+					<span draggable="true" class="draggable emoji" id="emoji84">🎹</span>
+					<span draggable="true" class="draggable emoji" id="emoji85">🎺</span>
+					<span draggable="true" class="draggable emoji" id="emoji86">🎻</span>
+					<span draggable="true" class="draggable emoji" id="emoji87">🎼</span>
+					<span draggable="true" class="draggable emoji" id="emoji88">🎽</span>
+					<span draggable="true" class="draggable emoji" id="emoji89">🎾</span>
+					<span draggable="true" class="draggable emoji" id="emoji90">🎿</span>
+					<span draggable="true" class="draggable emoji" id="emoji91">🏀</span>
+					<span draggable="true" class="draggable emoji" id="emoji92">🏁</span>
+					<span draggable="true" class="draggable emoji" id="emoji93">🏂</span>
+					<span draggable="true" class="draggable emoji" id="emoji94">🏃</span>
+					<span draggable="true" class="draggable emoji" id="emoji95">🏄</span>
+					<span draggable="true" class="draggable emoji" id="emoji96">🏅</span>
+					<span draggable="true" class="draggable emoji" id="emoji97">🏆</span>
+					<span draggable="true" class="draggable emoji" id="emoji98">🏇</span>
+					<span draggable="true" class="draggable emoji" id="emoji99">🏈</span>
+					<span draggable="true" class="draggable emoji" id="emoji100">🏉</span>
+					<span draggable="true" class="draggable emoji" id="emoji101">🏊</span>
+					<span draggable="true" class="draggable emoji" id="emoji102">🏋</span>
+					<span draggable="true" class="draggable emoji" id="emoji103">🏌</span>
+					<span draggable="true" class="draggable emoji" id="emoji104">🏍</span>
+					<span draggable="true" class="draggable emoji" id="emoji105">🏎</span>
+					<span draggable="true" class="draggable emoji" id="emoji106">🏏</span>
+					<span draggable="true" class="draggable emoji" id="emoji107">🏐</span>
+					<span draggable="true" class="draggable emoji" id="emoji108">🏑</span>
+					<span draggable="true" class="draggable emoji" id="emoji109">🏒</span>
+					<span draggable="true" class="draggable emoji" id="emoji110">🏓</span>
+					<span draggable="true" class="draggable emoji" id="emoji111">🏔</span>
+					<span draggable="true" class="draggable emoji" id="emoji112">🏕</span>
+					<span draggable="true" class="draggable emoji" id="emoji113">🏖</span>
+					<span draggable="true" class="draggable emoji" id="emoji114">🏗</span>
+					<span draggable="true" class="draggable emoji" id="emoji115">🏘</span>
+					<span draggable="true" class="draggable emoji" id="emoji116">🏙</span>
+					<span draggable="true" class="draggable emoji" id="emoji117">🏚</span>
+					<span draggable="true" class="draggable emoji" id="emoji118">🏛</span>
+					<span draggable="true" class="draggable emoji" id="emoji119">🏜</span>
+					<span draggable="true" class="draggable emoji" id="emoji120">🏝</span>
 				</div>
 				<label for="prompt">Prompt the AI (Or leave empty!):</label>
 				<input type="text" id="prompt" name="prompt" class="droppable">
