added more hardcoded emojis

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 				<div class="textarea-container">
 					<div>
 						<label for="username">Username:</label>
-						<input type="text" id="username" name="username" required maxlength="64" style="width: 40vw;">	
+						<input type="text" id="username" name="username" maxlength="64" style="width: 40vw;">	
 					</div>
 					<div>
 						<label for="description">Description:</label>
@@ -187,6 +187,85 @@
 					<span draggable="true" class="draggable emoji" id="emoji118">🏛</span>
 					<span draggable="true" class="draggable emoji" id="emoji119">🏜</span>
 					<span draggable="true" class="draggable emoji" id="emoji120">🏝</span>
+					<span draggable="true" class="draggable emoji" id="emoji121">🏞</span>
+					<span draggable="true" class="draggable emoji" id="emoji122">🏟</span>
+					<span draggable="true" class="draggable emoji" id="emoji123">🏠</span>
+					<span draggable="true" class="draggable emoji" id="emoji124">🏡</span>
+					<span draggable="true" class="draggable emoji" id="emoji125">🏢</span>
+					<span draggable="true" class="draggable emoji" id="emoji126">🏣</span>
+					<span draggable="true" class="draggable emoji" id="emoji127">🏤</span>
+					<span draggable="true" class="draggable emoji" id="emoji128">🏥</span>
+					<span draggable="true" class="draggable emoji" id="emoji129">🏦</span>
+					<span draggable="true" class="draggable emoji" id="emoji130">🏧</span>
+					<span draggable="true" class="draggable emoji" id="emoji131">🏨</span>
+					<span draggable="true" class="draggable emoji" id="emoji132">🏩</span>
+					<span draggable="true" class="draggable emoji" id="emoji133">🏪</span>
+					<span draggable="true" class="draggable emoji" id="emoji134">🏫</span>
+					<span draggable="true" class="draggable emoji" id="emoji135">🏬</span>
+					<span draggable="true" class="draggable emoji" id="emoji136">🏭</span>
+					<span draggable="true" class="draggable emoji" id="emoji137">🏮</span>
+					<span draggable="true" class="draggable emoji" id="emoji138">🏯</span>
+					<span draggable="true" class="draggable emoji" id="emoji139">🏰</span>
+					<span draggable="true" class="draggable emoji" id="emoji140">🏱</span>
+					<span draggable="true" class="draggable emoji" id="emoji141">🏲</span>
+					<span draggable="true" class="draggable emoji" id="emoji142">🏳</span>
+					<span draggable="true" class="draggable emoji" id="emoji143">🏴</span>
+					<span draggable="true" class="draggable emoji" id="emoji144">🏵</span>
+					<span draggable="true" class="draggable emoji" id="emoji145">🏶</span>
+					<span draggable="true" class="draggable emoji" id="emoji146">🏷</span>
+					<span draggable="true" class="draggable emoji" id="emoji147">🏸</span>
+					<span draggable="true" class="draggable emoji" id="emoji148">🏹</span>
+					<span draggable="true" class="draggable emoji" id="emoji149">🏺</span>
+					<span draggable="true" class="draggable emoji" id="emoji150">🏻</span>
+					<span draggable="true" class="draggable emoji" id="emoji151">🏼</span>
+					<span draggable="true" class="draggable emoji" id="emoji152">🏽</span>
+					<span draggable="true" class="draggable emoji" id="emoji153">🏾</span>
+					<span draggable="true" class="draggable emoji" id="emoji154">🏿</span>
+					<span draggable="true" class="draggable emoji" id="emoji155">🐀</span>
+					<span draggable="true" class="draggable emoji" id="emoji156">🐁</span>
+					<span draggable="true" class="draggable emoji" id="emoji157">🐂</span>
+					<span draggable="true" class="draggable emoji" id="emoji158">🐃</span>
+					<span draggable="true" class="draggable emoji" id="emoji159">🐄</span>
+					<span draggable="true" class="draggable emoji" id="emoji160">🐅</span>
+					<span draggable="true" class="draggable emoji" id="emoji161">🐆</span>
+					<span draggable="true" class="draggable emoji" id="emoji162">🐇</span>
+					<span draggable="true" class="draggable emoji" id="emoji163">🐈</span>
+					<span draggable="true" class="draggable emoji" id="emoji164">🐉</span>
+					<span draggable="true" class="draggable emoji" id="emoji165">🐊</span>
+					<span draggable="true" class="draggable emoji" id="emoji166">🐋</span>
+					<span draggable="true" class="draggable emoji" id="emoji167">🐌</span>
+					<span draggable="true" class="draggable emoji" id="emoji168">🐍</span>
+					<span draggable="true" class="draggable emoji" id="emoji169">🐎</span>
+					<span draggable="true" class="draggable emoji" id="emoji170">🐏</span>
+					<span draggable="true" class="draggable emoji" id="emoji171">🐐</span>
+					<span draggable="true" class="draggable emoji" id="emoji172">🐑</span>
+					<span draggable="true" class="draggable emoji" id="emoji173">🐒</span>
+					<span draggable="true" class="draggable emoji" id="emoji174">🐓</span>
+					<span draggable="true" class="draggable emoji" id="emoji175">🐔</span>
+					<span draggable="true" class="draggable emoji" id="emoji176">🐕</span>
+					<span draggable="true" class="draggable emoji" id="emoji177">🐖</span>
+					<span draggable="true" class="draggable emoji" id="emoji178">🐗</span>
+					<span draggable="true" class="draggable emoji" id="emoji179">🐘</span>
+					<span draggable="true" class="draggable emoji" id="emoji180">🐙</span>
+					<span draggable="true" class="draggable emoji" id="emoji181">🐚</span>
+					<span draggable="true" class="draggable emoji" id="emoji182">🐛</span>
+					<span draggable="true" class="draggable emoji" id="emoji183">🐜</span>
+					<span draggable="true" class="draggable emoji" id="emoji184">🐝</span>
+					<span draggable="true" class="draggable emoji" id="emoji185">🐞</span>
+					<span draggable="true" class="draggable emoji" id="emoji186">🐟</span>
+					<span draggable="true" class="draggable emoji" id="emoji187">🐠</span>
+					<span draggable="true" class="draggable emoji" id="emoji188">🐡</span>
+					<span draggable="true" class="draggable emoji" id="emoji189">🐢</span>
+					<span draggable="true" class="draggable emoji" id="emoji190">🐣</span>
+					<span draggable="true" class="draggable emoji" id="emoji191">🐤</span>
+					<span draggable="true" class="draggable emoji" id="emoji192">🐥</span>
+					<span draggable="true" class="draggable emoji" id="emoji193">🐦</span>
+					<span draggable="true" class="draggable emoji" id="emoji194">🐧</span>
+					<span draggable="true" class="draggable emoji" id="emoji195">🐨</span>
+					<span draggable="true" class="draggable emoji" id="emoji196">🐩</span>
+					<span draggable="true" class="draggable emoji" id="emoji197">🐪</span>
+					<span draggable="true" class="draggable emoji" id="emoji198">🐫</span>
+					<span draggable="true" class="draggable emoji" id="emoji199">🐬</span>
 				</div>
 				<label for="prompt">Prompt the AI (Or leave empty!):</label>
 				<input type="text" id="prompt" name="prompt" class="droppable">
