chaning preprompt slightly and adding warning

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
 					</div>
 				  </div>
 				<div class="input-container">
-					<label for="imageName">Generate Image</label>
+					<label for="imageName">Generate Image (Warning! Not double filtered may result in NSFW currently!)</label>
 					<input class="droppable" type="checkbox" id="imageName" name="imageName">
 				</div>
 
